--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="{ '../static/images/favicon.ico' }">
     
     <!-- Custom CSS -->
-    <link href="../static/css/styles.css" rel="stylesheet">
+    <link href="../static/sass/styles.css" rel="stylesheet">
 
     <title>Portfolio Website</title>  
   </head>
@@ -20,12 +20,12 @@
       <div class="header">
         
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg shadow">
+        <nav class="navbar navbar-expand-md border-bottom border-body" data-bs-theme="dark">
           <div class="container-fluid">
             
             <a class="col-md-6 d-flex align-items-center mb-2 mb-md-0 h4 text-white text-decoration-none text-uppercase fw-bolder" href="/">
               
-              Atharva Kulkarni | Portfolio
+              Atharva K | Portfolio
             </a>
 
             <button 
@@ -209,7 +209,7 @@
                       <div class="card-footer bg-transparent mb-3">
                         <a class="btn btn-outline-primary btn-sm text-uppercase" href="{{ project.link }}" target="_blank">
                           <span class="material-icons-outlined me-1">code</span>
-                          Source Code
+                          Github Repository
                         </a>
                       </div>
                     </div>
