--- a/templates/index.html
+++ b/templates/index.html
@@ -73,8 +73,8 @@
                 <div class="col-lg-8 col-xl-7 col-xxl-6">
                   
                     <div class="my-5">
-                      <h2 class="text-center fw-bold mb-2">{{ hero.title }}</h2>
-                      <h2 class="text-center fw-bold mb-2">{{ hero.subtitle }}</h2>
+                      <h2 class="text-center fw-bold mb-3">{{ hero.title }}</h2>
+                      <h2 class="text-center mb-2">{{ hero.subtitle }}</h2>
                       <p class="lead text-center text-white mb-4">
                         {{ hero.description }}
                       </p>
@@ -87,7 +87,7 @@
                           <!-- <span class="material-icons-outlined ms-2">help_outline</span> -->
                         </button>
                         </a>
-                        <a href="https://www.linkedin.com/in/atharvack" target="_blank">
+                        <a href="https://github.com/Atharvack" target="_blank">
                         <button type="button" id="demo" class="btn btn-outline-light btn-lg text-uppercase px-4 py-2 me-sm-3">
                           Github
                           <!-- <span class="material-icons-outlined ms-2">play_circle</span> -->
@@ -142,7 +142,7 @@
             <div class="row justify-content-center">
               <h2 class="fw-bold">About</h2>
               <p class="lead mb-5">
-                I am a freelance web developer who builds elegant, fast, and scalable web applications.
+                I'm an aspiring software professional with a diverse set of technical skill set spanning cloud platforms, machine learning, and software development. My cloud expertise includes AWS Cloud Foundations certification, comprehensive training through the AWS Graduate Academy, and proficiency in Azure cloud services through different Azure courses. While I might be considered fresher to professional software development, I've built a solid foundation in Python programming, machine learning concepts, and data analysis. Through self-study and hands-on projects, I've developed the skills needed to contribute effectively while continuing to learn and grow. I'm now eager to bring my technical knowledge and enthusiasm for innovation to a professional role where I can make meaningful contributions to challenging projects.
               </p>
             </div>
           </div>
