--- a/static/sass/styles.css
+++ b/static/sass/styles.css
@@ -31,7 +31,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: rgb(2, 11, 31);
+  --bs-primary: hsl(221, 88%, 6%);
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -39,7 +39,7 @@
   --bs-danger: #dc3545;
   --bs-light: hsl(0, 1%, 66%);
   --bs-dark: #212529;
-  --bs-primary-rgb: 2, 11, 31;
+  --bs-primary-rgb: 2, 10, 29;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -95,11 +95,11 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: rgb(2, 11, 31);
-  --bs-link-color-rgb: 2, 11, 31;
+  --bs-link-color: hsl(221, 88%, 6%);
+  --bs-link-color-rgb: 2, 10, 29;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: #020919;
-  --bs-link-hover-color-rgb: 2, 9, 25;
+  --bs-link-hover-color: #020817;
+  --bs-link-hover-color-rgb: 2, 8, 23;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
   --bs-border-width: 1px;
@@ -119,7 +119,7 @@
   --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-focus-ring-width: 0.25rem;
   --bs-focus-ring-opacity: 0.25;
-  --bs-focus-ring-color: rgba(2, 11, 31, 0.25);
+  --bs-focus-ring-color: rgba(2, 10, 29, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
   --bs-form-invalid-color: #dc3545;
@@ -142,7 +142,7 @@
   --bs-tertiary-color-rgb: 222, 226, 230;
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
-  --bs-primary-text-emphasis: #676d79;
+  --bs-primary-text-emphasis: #676c77;
   --bs-secondary-text-emphasis: #a7acb1;
   --bs-success-text-emphasis: #75b798;
   --bs-info-text-emphasis: #6edff6;
@@ -158,7 +158,7 @@
   --bs-danger-bg-subtle: #2c0b0e;
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
-  --bs-primary-border-subtle: #010713;
+  --bs-primary-border-subtle: #010611;
   --bs-secondary-border-subtle: #41464b;
   --bs-success-border-subtle: #0f5132;
   --bs-info-border-subtle: #087990;
@@ -167,10 +167,10 @@
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
-  --bs-link-color: #676d79;
-  --bs-link-hover-color: #858a94;
-  --bs-link-color-rgb: 103, 109, 121;
-  --bs-link-hover-color-rgb: 133, 138, 148;
+  --bs-link-color: #676c77;
+  --bs-link-hover-color: #858992;
+  --bs-link-color-rgb: 103, 108, 119;
+  --bs-link-hover-color-rgb: 133, 137, 146;
   --bs-code-color: #e685b5;
   --bs-border-color: #495057;
   --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
@@ -2136,9 +2136,9 @@ progress {
 .form-control:focus {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
-  border-color: #81858f;
+  border-color: #81858e;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   min-width: 85px;
@@ -2287,9 +2287,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #81858f;
+  border-color: #81858e;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2373,13 +2373,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #81858f;
+  border-color: #81858e;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
 }
 .form-check-input:checked {
-  background-color: rgb(2, 11, 31);
-  border-color: rgb(2, 11, 31);
+  background-color: hsl(221, 88%, 6%);
+  border-color: hsl(221, 88%, 6%);
 }
 .form-check-input:checked[type=checkbox] {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2388,8 +2388,8 @@ textarea.form-control-lg {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: rgb(2, 11, 31);
-  border-color: rgb(2, 11, 31);
+  background-color: hsl(221, 88%, 6%);
+  border-color: hsl(221, 88%, 6%);
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2420,7 +2420,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2381858f'/%3e%3c/svg%3e");
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%2381858e'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2468,10 +2468,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2482,7 +2482,7 @@ textarea.form-control-lg {
   margin-top: -0.25rem;
   -webkit-appearance: none;
           appearance: none;
-  background-color: rgb(2, 11, 31);
+  background-color: hsl(221, 88%, 6%);
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2495,7 +2495,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #b3b6bc;
+  background-color: #b3b6bb;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2511,7 +2511,7 @@ textarea.form-control-lg {
   height: 1rem;
   -moz-appearance: none;
        appearance: none;
-  background-color: rgb(2, 11, 31);
+  background-color: hsl(221, 88%, 6%);
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2524,7 +2524,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #b3b6bc;
+  background-color: #b3b6bb;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -3005,19 +3005,19 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: rgb(2, 11, 31);
-  --bs-btn-border-color: rgb(2, 11, 31);
+  --bs-btn-bg: hsl(221, 88%, 6%);
+  --bs-btn-border-color: hsl(221, 88%, 6%);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #02091a;
-  --bs-btn-hover-border-color: #020919;
-  --bs-btn-focus-shadow-rgb: 40, 48, 65;
+  --bs-btn-hover-bg: #020919;
+  --bs-btn-hover-border-color: #020817;
+  --bs-btn-focus-shadow-rgb: 40, 47, 63;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #020919;
-  --bs-btn-active-border-color: #020817;
+  --bs-btn-active-bg: #020817;
+  --bs-btn-active-border-color: #020816;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: rgb(2, 11, 31);
-  --bs-btn-disabled-border-color: rgb(2, 11, 31);
+  --bs-btn-disabled-bg: hsl(221, 88%, 6%);
+  --bs-btn-disabled-border-color: hsl(221, 88%, 6%);
 }
 
 .btn-secondary {
@@ -3140,19 +3140,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: rgb(2, 11, 31);
-  --bs-btn-border-color: rgb(2, 11, 31);
+  --bs-btn-color: hsl(221, 88%, 6%);
+  --bs-btn-border-color: hsl(221, 88%, 6%);
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: rgb(2, 11, 31);
-  --bs-btn-hover-border-color: rgb(2, 11, 31);
-  --bs-btn-focus-shadow-rgb: 2, 11, 31;
+  --bs-btn-hover-bg: hsl(221, 88%, 6%);
+  --bs-btn-hover-border-color: hsl(221, 88%, 6%);
+  --bs-btn-focus-shadow-rgb: 2, 10, 29;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: rgb(2, 11, 31);
-  --bs-btn-active-border-color: rgb(2, 11, 31);
+  --bs-btn-active-bg: hsl(221, 88%, 6%);
+  --bs-btn-active-border-color: hsl(221, 88%, 6%);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: rgb(2, 11, 31);
+  --bs-btn-disabled-color: hsl(221, 88%, 6%);
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: rgb(2, 11, 31);
+  --bs-btn-disabled-border-color: hsl(221, 88%, 6%);
   --bs-gradient: none;
 }
 
@@ -3287,7 +3287,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: 0 0 0 #000;
-  --bs-btn-focus-shadow-rgb: 40, 48, 65;
+  --bs-btn-focus-shadow-rgb: 40, 47, 63;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -3394,7 +3394,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: var(--bs-body-color);
   --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: rgb(2, 11, 31);
+  --bs-dropdown-link-active-bg: hsl(221, 88%, 6%);
   --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3660,7 +3660,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: rgb(2, 11, 31);
+  --bs-dropdown-link-active-bg: hsl(221, 88%, 6%);
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3800,7 +3800,7 @@ textarea.form-control-lg {
 }
 .nav-link:focus-visible {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
 }
 .nav-link.disabled, .nav-link:disabled {
   color: var(--bs-nav-link-disabled-color);
@@ -3843,7 +3843,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: rgb(2, 11, 31);
+  --bs-nav-pills-link-active-bg: hsl(221, 88%, 6%);
 }
 .nav-pills .nav-link {
   border-radius: var(--bs-nav-pills-border-radius);
@@ -4531,8 +4531,8 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
   --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2301040c'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-border-color: #81858f;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  --bs-accordion-btn-focus-border-color: #81858e;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: var(--bs-primary-text-emphasis);
@@ -4650,8 +4650,8 @@ textarea.form-control-lg {
 }
 
 [data-bs-theme=dark] .accordion-button::after {
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23676d79'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23676d79'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23676c77'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23676c77'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
 .breadcrumb {
@@ -4700,10 +4700,10 @@ textarea.form-control-lg {
   --bs-pagination-hover-border-color: var(--bs-border-color);
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: var(--bs-secondary-bg);
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: rgb(2, 11, 31);
-  --bs-pagination-active-border-color: rgb(2, 11, 31);
+  --bs-pagination-active-bg: hsl(221, 88%, 6%);
+  --bs-pagination-active-border-color: hsl(221, 88%, 6%);
   --bs-pagination-disabled-color: var(--bs-secondary-color);
   --bs-pagination-disabled-bg: var(--bs-secondary-bg);
   --bs-pagination-disabled-border-color: var(--bs-border-color);
@@ -4915,7 +4915,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: var(--bs-border-radius);
   --bs-progress-box-shadow: var(--bs-box-shadow-inset);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: rgb(2, 11, 31);
+  --bs-progress-bar-bg: hsl(221, 88%, 6%);
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -4980,8 +4980,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: rgb(2, 11, 31);
-  --bs-list-group-active-border-color: rgb(2, 11, 31);
+  --bs-list-group-active-bg: hsl(221, 88%, 6%);
+  --bs-list-group-active-border-color: hsl(221, 88%, 6%);
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -5312,7 +5312,7 @@ textarea.form-control-lg {
   --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
   --bs-btn-close-opacity: 0.5;
   --bs-btn-close-hover-opacity: 0.75;
-  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(2, 11, 31, 0.25);
+  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(2, 10, 29, 0.25);
   --bs-btn-close-focus-opacity: 1;
   --bs-btn-close-disabled-opacity: 0.25;
   --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
@@ -6848,8 +6848,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: RGBA(2, 9, 25, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(2, 9, 25, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(2, 8, 23, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(2, 8, 23, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-secondary {
@@ -11985,7 +11985,7 @@ hr {
 
 /* ---------- BUTTONS ---------- */
 .btn-light {
-  color: rgb(2, 11, 31);
+  color: hsl(221, 88%, 6%);
 }
 
 .btn-light:hover {
@@ -11994,7 +11994,7 @@ hr {
 }
 
 .btn-outline-light:hover {
-  color: rgb(2, 11, 31);
+  color: hsl(221, 88%, 6%);
 }
 
 /* ---------- ICONS ---------- */
@@ -12044,21 +12044,21 @@ a .material-icons-outlined {
 
 .header {
   position: relative;
-  background: linear-gradient(60deg, rgb(2, 25, 69) 0%, rgb(0, 0, 0) 100%);
+  background: linear-gradient(60deg, hsl(219, 94%, 40%) 0%, rgb(0, 0, 0) 100%);
   color: hsl(0, 1%, 66%);
 }
 
 /*--------text-----------*/
 h2, .h2 {
-  color: hsl(0, 1%, 73%);
+  color: hsl(0, 1%, 90%);
 }
 
 h5, .h5 {
-  color: hsl(0, 1%, 73%);
+  color: hsl(0, 1%, 90%);
 }
 
 p {
-  color: hsl(0, 1%, 50%);
+  color: hsl(0, 1%, 70%);
 }
 
 /* ---------- ABOUT ---------- */
@@ -12075,7 +12075,7 @@ p {
 
 /* ---------- PROJECTS ---------- */
 .card {
-  background-color: hsl(0, 1%, 73%);
+  background-color: hsl(0, 1%, 90%);
 }
 .card img {
   height: 250px;
