--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-md border-bottom border-body" data-bs-theme="dark">
           <div class="container-fluid">
             
-            <a class="col-md-6 d-flex align-items-center mb-2 mb-md-0 h4 text-white text-decoration-none text-uppercase fw-bolder" href="/">
+            <a class="col-md-6 d-flex align-items-center mb-2 mb-md-0 h4 text-primary text-decoration-none text-uppercase fw-bolder" href="/">
               
               Atharva K | Portfolio
             </a>
@@ -73,16 +73,16 @@
                 <div class="col-lg-8 col-xl-7 col-xxl-6">
                   
                     <div class="my-5">
-                      <h2 class="text-center fw-bold mb-3">{{ hero.title }}</h2>
-                      <h2 class="text-center mb-2">{{ hero.subtitle }}</h2>
-                      <p class="lead text-center text-white mb-4">
+                      <h2 class="text-center fw-bold mb-3 text-primary">{{ hero.title }}</h2>
+                      <h2 class="text-center mb-2 text-primary">{{ hero.subtitle }}</h2>
+                      <p class="lead text-center text-primary mb-4">
                         {{ hero.description }}
                       </p>
                       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-3">
                         <a href="https://www.linkedin.com/in/atharvack" target="_blank">
                          
                           <!-- <span class="material-icons-outlined ms-2">help_outline</span> -->
-                        <button type="button" class="btn btn-light btn-lg text-uppercase px-4 py-2 me-sm-3">
+                        <button type="button" class="btn btn-outline-light btn-lg text-uppercase px-4 py-2 me-sm-3">
                           Linkedin
                           <!-- <span class="material-icons-outlined ms-2">help_outline</span> -->
                         </button>
@@ -104,7 +104,7 @@
                         </button>
                         </a>
                         <a href="https://github.com/Atharvack" target="_blank">
-                        <button type="button" id="demo" class="btn btn-light btn-lg text-uppercase px-4 py-2 me-sm-3">
+                        <button type="button" id="demo" class="btn btn-outline-light btn-lg text-uppercase px-4 py-2 me-sm-3">
                           Resume
                           <!-- <span class="material-icons-outlined ms-2">play_circle</span> -->
                         </button>
