--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -101,8 +101,8 @@ a {
 
 }
 
-.card-img-top {
-  border: 5px solid $tcol;
+.hero-card-img-top {
+  border: 10px solid $tcol;
   border-radius: 50%;
   object-fit: cover;
   width: 300px;
