--- a/templates/index.html
+++ b/templates/index.html
@@ -115,9 +115,9 @@
                 <div class="col-percentage justify-content-center">
 
                   {% if hero.image.url %}
-                    <img class="card-img-top" src="{{ hero.image.url }}" alt="Hero Image">
+                    <img class="hero-card-img-top" src="{{ hero.image.url }}" alt="Hero Image">
                   {% else %}
-                    <img class="card-img-top" src="{% static 'images/no_image.png' %}" alt="Image Not Available">
+                    <img class="hero-card-img-top" src="{% static 'images/no_image.png' %}" alt="Image Not Available">
                   {% endif %}
 
                 </div>
